# pytca

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  requirements.txt  setup.cfg  setup.py
batch_scripts/linux/: cache_market_data.sh  kill_tcapy.sh  orca.sh  read_celery_log.sh  read_logs_gnome_terminal.sh  read_mongo_log.sh  render_jupyter_notebooks.sh  reset_docker_containers.sh  restart_celery.sh  restart_db.sh  restart_influxdb.sh  restart_tcapy.sh  run_python_script.sh  start_jupyter.sh  update_chartpy_dev.sh
examples/: api_request.py  api_server.py  defi_analysis_example.py  geospatial_analysis_example.py  performing_analysis.py  sentiment_analysis_example.py  visualization_example.py
examples/analysis/: analyze_impact.py  analyze_metrics.py  equity_analysis_example.py  fx_analysis_example.py
examples/data_loading/: load_data.py  load_sql_data.py
examples/ml/: ml_forecast_example.py
examples/portfolio/: portfolio_optimization_example.py
examples/risk_compliance/: risk_management_example.py
examples/visualization/: plot_data.py
pytca/: __init__.py
pytca/analysis/: dataframeholder.py  tcaengine.py  tcamarkettradeloader.py  tcamarkettradeloaderimpl.py  tcarequest.py  tcatickerloader.py  tcatickerloaderimpl.py  tradeorderfilter.py
pytca/api/: app_api.py
pytca/conf/: celery_calls.py  celeryconfig.py  constants.py  (+13 more)
test/: config.py  conftest.py  run_tests.sh  test_analysis.py  test_cpp.py  test_data_loaders.py  test_ml.py  test_portfolio.py  test_risk.py  test_visualization.py
(+104 files in other folders)
