[metadata]
name = pytca
version = 1.1.0
description = Advanced Python Library for Transaction Cost Analysis
author = Jialue Chen
author_email = jialuechen@outlook.com
url = https://github.com/jialuechen/pytca

[options]
packages = find:
install_requires =
    pandas
    matplotlib
    plotly
    bokeh
    dash
    flask
    pybind11
    numpy
    geopandas
    sklearn
    textblob
    requests
    web3

[options.extras_require]
testing =
    pytest
    pytest-cov

[build_ext]
inplace = 1
